HVAC Backup 2/objects/SMS_Template__c.object
<CustomObject>
    <fields>
        <fullName>External_ID_Backend_DU__c</fullName>
        <externalId>true</externalId>
        <label>External ID Backend DU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async</fullName>
                </value>
                <value>
                    <fullName>Real time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PE_ID__c</fullName>
        <label>PE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Data__c</fullName>
        <label>Template Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Whatsapp_Template_Id__c</fullName>
        <label>Whatsapp Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SMS Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>TemplateId__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Whatsapp_Template_Id__c</columns>
        <columns>Template_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SMS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Templates</pluralLabel>
    <recordTypes>
        <fullName>SMS</fullName>
        <active>true</active>
        <label>SMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Whatsapp</fullName>
        <active>true</active>
        <label>Whatsapp</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>